--- a/Dom_bom/dom.html
+++ b/Dom_bom/dom.html
@@ -70,6 +70,21 @@
          </ul>
          <button id="removeLastTask">Remove Last Task</button>
         </section>
-      <script src="./script.js"></script>
+       <!-- example-6 Event Delegation -->
+      <section id="example-6">
+        <h2>Event Handling in the DOM</h2>
+        <button id="clickButton">Click Me!</button>
+      </section>
+   <!-- Example 7:Event Delegation -->
+       <section id="example-7">
+        <h2>Event Delegation</h2>
+        <ul id="teaList">
+            <li class="teaItem">Green Tea</li>
+            <li class="teaItem">Black Tea</li>
+            <li class="teaItem">Oolong Tea</li>
+        </ul>
+        <p>Click on any tea to select it!</p>
+       </section>
+       <script src="./script.js"></script>
 </body>
 </html>
