--- a/Dom_bom/dom.html
+++ b/Dom_bom/dom.html
@@ -85,6 +85,16 @@
         </ul>
         <p>Click on any tea to select it!</p>
        </section>
+    <!-- Example: 8 From Handiling -->
+     <section id="Example-8">
+        <h2>From Handling</h2>
+        <form action="" id="feedbackForm">
+            <label for="feedbackInput">Your Feedback:</label>
+            <input type="text" id="feedbackInput" placeholder=""Enter Feedback">
+            <button type="submit">Submit Feedback</button>
+            <p id="feedbackDisplay"></p>
+        </form>
+     </section>
        <script src="./script.js"></script>
 </body>
 </html>
