--- a/Dom_bom/dom.html
+++ b/Dom_bom/dom.html
@@ -95,6 +95,11 @@
             <p id="feedbackDisplay"></p>
         </form>
      </section>
+     <!-- Example 9: DOM Content Loaded -->
+      <section id="example-9">
+        <h2>DOM Content Loaded</h2>
+        <p id="domStatus">Waiting for DOM to load...</p>
+      </section>
        <script src="./script.js"></script>
 </body>
 </html>
