--- a/Dom_bom/part2prac/index.html
+++ b/Dom_bom/part2prac/index.html
@@ -7,7 +7,15 @@
 </head>
 <body>
  <h1>Spider man</h1>
+ <img src="" alt="#image">
+ <h1>about</h1>
 
+ <p><b>spiderman</b> is a Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio voluptas inventore asperiores voluptatibus? In enim modi amet! Voluptatem ut qui fugit. Laborum sed mollitia vel? Veniam maxime dolore ab doloremque.
+ Molestiae maxime doloribus consequatur adipisci obcaecati dolores soluta nam facilis, eius, non, ipsum eveniet omnis odit vitae enim sit eos tempore fugiat voluptatum quae tenetur dolorem eum praesentium! Tenetur, est.
+ Debitis accusantium esse voluptates iure blanditiis cumque dignissimos nemo, voluptatem illum, ipsa culpa consequuntur magnam delectus officia repellat! Corrupti totam ab ratione accusantium facere ipsum, quas cupiditate dolor temporibus facilis?
+ Accusamus aspernatur harum pariatur, fugiat similique sit delectus. Vel eligendi cum quas. Voluptate voluptatibus magni sunt magnam at, laudantium quo? Repellendus optio dolorum saepe eligendi nam assumenda sint cumque totam?
+ Laboriosam sint, modi vero illum tempora ipsa omnis nostrum voluptatem ipsum quisquam minima accusamus odit veniam quae obcaecati sequi ullam libero? Nihil vel delectus aut illo maiores nesciunt laborum facilis.
+ Commodi repellendus cupiditate error maiores sed quam deleniti, amet impedit aliquid repudiandae atque sit ut eius soluta! Maxime sint esse deserunt, dolor ducimus officia magni voluptatum nobis odit ipsam sequi!</p>
     <script src="./script.js"></script>
 </body>
 </html>
