--- a/Dom_bom/part2prac/index.html
+++ b/Dom_bom/part2prac/index.html
@@ -3,19 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dom & Bom</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body>
- <h1>Spider man</h1>
- <img src="" alt="#image">
- <h1>about</h1>
+<body id="black">
+    <!-- Example:1 change text content on page -->
+     <h1>Example=1</h1>
+    <h1 id="text">jai shree Ram</h1>
+    <button id="btn">click to change</button>
+ <br>
+ <br>
+    <!-- Example:2 change bg of webpage -->
+     <h1>example:2</h1>
+      <button id="btn2">change bg</button>
+      <h1>heloo</h1>
+   <!-- example:3Write JS code to change the text of a <p> tag with id "para" when a button is clicked. -->
+    <h1>Example:3</h1>
+    <button id="btn3">click to change paragraph</button>
+    <p id="para">my name is rahul verma</p>
 
- <p><b>spiderman</b> is a Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio voluptas inventore asperiores voluptatibus? In enim modi amet! Voluptatem ut qui fugit. Laborum sed mollitia vel? Veniam maxime dolore ab doloremque.
- Molestiae maxime doloribus consequatur adipisci obcaecati dolores soluta nam facilis, eius, non, ipsum eveniet omnis odit vitae enim sit eos tempore fugiat voluptatum quae tenetur dolorem eum praesentium! Tenetur, est.
- Debitis accusantium esse voluptates iure blanditiis cumque dignissimos nemo, voluptatem illum, ipsa culpa consequuntur magnam delectus officia repellat! Corrupti totam ab ratione accusantium facere ipsum, quas cupiditate dolor temporibus facilis?
- Accusamus aspernatur harum pariatur, fugiat similique sit delectus. Vel eligendi cum quas. Voluptate voluptatibus magni sunt magnam at, laudantium quo? Repellendus optio dolorum saepe eligendi nam assumenda sint cumque totam?
- Laboriosam sint, modi vero illum tempora ipsa omnis nostrum voluptatem ipsum quisquam minima accusamus odit veniam quae obcaecati sequi ullam libero? Nihil vel delectus aut illo maiores nesciunt laborum facilis.
- Commodi repellendus cupiditate error maiores sed quam deleniti, amet impedit aliquid repudiandae atque sit ut eius soluta! Maxime sint esse deserunt, dolor ducimus officia magni voluptatum nobis odit ipsam sequi!</p>
+    <!-- Example:4 How do you create a new element in DOM and add it to a webpage? -->
+    <div id="container"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script src="./script.js"></script>
 </body>
 </html>
