--- a/4_Project JS/1_Todo/inedx.html
+++ b/4_Project JS/1_Todo/inedx.html
@@ -14,8 +14,10 @@
         <button id="add-task-btn">Add Task</button>
      </div>
        <ul id="todo-list">
-        <!-- <li></li>
-        <button class="delete">delete</button> -->
+        <!-- <li>
+         test
+         <button id="btn2">Delete</button>
+        </li> -->
        </ul>
    </div>
    <script src="./app.js"></script>
