--- a/4_Project JS/1_Todo/inedx.html
+++ b/4_Project JS/1_Todo/inedx.html
@@ -13,7 +13,7 @@
         <input type="text" name="input" id="todo-input" placeholder="Add a new task">
         <button id="add-task-btn">Add Task</button>
      </div>
-       <ul id="todo-list">
+       <ul id="todo_List">
         <!-- <li>
          <button id="btn2">Delete</button>
         </li> -->
